# early-stopping-pytorch

./: .gitignore  README.md  pyproject.toml
early-stopping-pytorch/: early_stopping.py
early_stopping_pytorch/: __init__.py  early_stopping.py
tests/: test_early_stopping.py
